[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
daachorse = "1.0.0"
env_logger = "0.10.1"
fp-core = "0.1.9"
log = "0.4.20"
measure_time = "0.8.2"
memoize = "0.4.1"
num = "0.4.1"
rayon = "1.8.0"
regex = "1.10.2"

[profile.profiling]
inherits = "release"
debug = true
